--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-native-firebase/app": "^16.5.0",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.0",
@@ -24,13 +25,16 @@
     "@react-navigation/stack": "^6.3.4",
     "moment": "^2.29.4",
     "react": "18.1.0",
+    "react-hook-form": "^7.43.0",
     "react-native": "0.70.5",
+    "react-native-background-timer": "^2.4.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-modal-selector": "^2.1.2",
     "react-native-pager-view": "^6.1.0",
     "react-native-paper": "^4.12.5",
+    "react-native-paper-form-builder": "^2.1.2",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
