--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "29.4",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
-  },
-  "jest": {
-    "preset": "react-native"
   }
+  
 }
